Grammar/Par.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.4).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module Grammar.Par
  ( happyError
  , myLexer
  , pProgram
  ) where

import Prelude

import qualified Grammar.Abs
import Grammar.Lex

}

%name pProgram_internal Program
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!'        { PT _ (TS _ 1)  }
  '!='       { PT _ (TS _ 2)  }
  '%'        { PT _ (TS _ 3)  }
  '&'        { PT _ (TS _ 4)  }
  '&&'       { PT _ (TS _ 5)  }
  '('        { PT _ (TS _ 6)  }
  ')'        { PT _ (TS _ 7)  }
  '*'        { PT _ (TS _ 8)  }
  '+'        { PT _ (TS _ 9)  }
  ','        { PT _ (TS _ 10) }
  '-'        { PT _ (TS _ 11) }
  '/'        { PT _ (TS _ 12) }
  ';'        { PT _ (TS _ 13) }
  '<'        { PT _ (TS _ 14) }
  '<='       { PT _ (TS _ 15) }
  '='        { PT _ (TS _ 16) }
  '=='       { PT _ (TS _ 17) }
  '>'        { PT _ (TS _ 18) }
  '>='       { PT _ (TS _ 19) }
  'False'    { PT _ (TS _ 20) }
  'True'     { PT _ (TS _ 21) }
  'bool'     { PT _ (TS _ 22) }
  'else'     { PT _ (TS _ 23) }
  'function' { PT _ (TS _ 24) }
  'if'       { PT _ (TS _ 25) }
  'int'      { PT _ (TS _ 26) }
  'print'    { PT _ (TS _ 27) }
  'string'   { PT _ (TS _ 28) }
  'then'     { PT _ (TS _ 29) }
  'void'     { PT _ (TS _ 30) }
  'while'    { PT _ (TS _ 31) }
  '{'        { PT _ (TS _ 32) }
  '||'       { PT _ (TS _ 33) }
  '}'        { PT _ (TS _ 34) }
  L_Ident    { PT _ (TV _)    }
  L_integ    { PT _ (TI _)    }
  L_quoted   { PT _ (TL _)    }

%%

Ident :: { (Grammar.Abs.BNFC'Position, Grammar.Abs.Ident) }
Ident  : L_Ident { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.Ident (tokenText $1)) }

Integer :: { (Grammar.Abs.BNFC'Position, Integer) }
Integer  : L_integ  { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), (read (tokenText $1)) :: Integer) }

String  :: { (Grammar.Abs.BNFC'Position, String) }
String   : L_quoted { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), ((\(PT _ (TL s)) -> s) $1)) }

Expr6 :: { (Grammar.Abs.BNFC'Position, Grammar.Abs.Expr) }
Expr6
  : Ident { (fst $1, Grammar.Abs.EVar (fst $1) (snd $1)) }
  | Integer { (fst $1, Grammar.Abs.EInt (fst $1) (snd $1)) }
  | 'True' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.ETrue (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1))) }
  | 'False' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.EFalse (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1))) }
  | Ident '(' ListExpr ')' { (fst $1, Grammar.Abs.ECall (fst $1) (snd $1) (snd $3)) }
  | String { (fst $1, Grammar.Abs.EString (fst $1) (snd $1)) }
  | '(' Expr ')' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), (snd $2)) }

Expr5 :: { (Grammar.Abs.BNFC'Position, Grammar.Abs.Expr) }
Expr5
  : '-' Expr6 { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.ENeg (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | '!' Expr6 { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.ENot (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | Expr6 { (fst $1, (snd $1)) }

Expr4 :: { (Grammar.Abs.BNFC'Position, Grammar.Abs.Expr) }
Expr4
  : Expr4 MulOp Expr5 { (fst $1, Grammar.Abs.EMul (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr5 { (fst $1, (snd $1)) }

Expr3 :: { (Grammar.Abs.BNFC'Position, Grammar.Abs.Expr) }
Expr3
  : Expr3 AddOp Expr4 { (fst $1, Grammar.Abs.EAdd (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr4 { (fst $1, (snd $1)) }

Expr2 :: { (Grammar.Abs.BNFC'Position, Grammar.Abs.Expr) }
Expr2
  : Expr2 RelOp Expr3 { (fst $1, Grammar.Abs.ERel (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr3 { (fst $1, (snd $1)) }

Expr1 :: { (Grammar.Abs.BNFC'Position, Grammar.Abs.Expr) }
Expr1
  : Expr2 '&&' Expr1 { (fst $1, Grammar.Abs.EAnd (fst $1) (snd $1) (snd $3)) }
  | Expr2 { (fst $1, (snd $1)) }

Expr :: { (Grammar.Abs.BNFC'Position, Grammar.Abs.Expr) }
Expr
  : Expr1 '||' Expr { (fst $1, Grammar.Abs.EOr (fst $1) (snd $1) (snd $3)) }
  | Expr1 { (fst $1, (snd $1)) }

ListExpr :: { (Grammar.Abs.BNFC'Position, [Grammar.Abs.Expr]) }
ListExpr
  : {- empty -} { (Grammar.Abs.BNFC'NoPosition, []) }
  | Expr { (fst $1, (:[]) (snd $1)) }
  | Expr ',' ListExpr { (fst $1, (:) (snd $1) (snd $3)) }

AddOp :: { (Grammar.Abs.BNFC'Position, Grammar.Abs.AddOp) }
AddOp
  : '+' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.Plus (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1))) }
  | '-' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.Minus (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1))) }

MulOp :: { (Grammar.Abs.BNFC'Position, Grammar.Abs.MulOp) }
MulOp
  : '*' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.Times (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1))) }
  | '/' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.Div (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1))) }
  | '%' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.Mod (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1))) }

RelOp :: { (Grammar.Abs.BNFC'Position, Grammar.Abs.RelOp) }
RelOp
  : '<' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.LTH (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1))) }
  | '<=' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.LE (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1))) }
  | '>' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.GTH (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1))) }
  | '>=' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.GE (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1))) }
  | '==' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.EQU (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1))) }
  | '!=' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.NE (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1))) }

Inst :: { (Grammar.Abs.BNFC'Position, Grammar.Abs.Inst) }
Inst
  : Ident '=' Expr { (fst $1, Grammar.Abs.IAssign (fst $1) (snd $1) (snd $3)) }
  | 'if' '(' Expr ')' 'then' Block 'else' Block { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.IIfElse (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $6) (snd $8)) }
  | 'if' '(' Expr ')' 'then' Block { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.IIf (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $6)) }
  | Type Ident '=' Expr { (fst $1, Grammar.Abs.IInit (fst $1) (snd $1) (snd $2) (snd $4)) }
  | 'while' '(' Expr ')' Block { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.IWhile (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
  | 'function' Ident '(' ListArg ')' Block { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.IFunDef (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4) (snd $6)) }
  | Expr { (fst $1, Grammar.Abs.IExpr (fst $1) (snd $1)) }
  | 'print' '(' Expr ')' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.IPrint (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1)) (snd $3)) }

Arg :: { (Grammar.Abs.BNFC'Position, Grammar.Abs.Arg) }
Arg
  : Type Ident { (fst $1, Grammar.Abs.ArgVal (fst $1) (snd $1) (snd $2)) }
  | '&' Type Ident { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.ArgRef (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $3)) }

ListArg :: { (Grammar.Abs.BNFC'Position, [Grammar.Abs.Arg]) }
ListArg
  : {- empty -} { (Grammar.Abs.BNFC'NoPosition, []) }
  | Arg { (fst $1, (:[]) (snd $1)) }
  | Arg ',' ListArg { (fst $1, (:) (snd $1) (snd $3)) }

Type :: { (Grammar.Abs.BNFC'Position, Grammar.Abs.Type) }
Type
  : 'int' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.TypeInt (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1))) }
  | 'bool' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.TypeBool (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1))) }
  | 'string' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.TypeStr (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1))) }
  | 'void' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.TypeVoid (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1))) }

ListInst :: { (Grammar.Abs.BNFC'Position, [Grammar.Abs.Inst]) }
ListInst
  : {- empty -} { (Grammar.Abs.BNFC'NoPosition, []) }
  | Inst { (fst $1, (:[]) (snd $1)) }
  | Inst ';' ListInst { (fst $1, (:) (snd $1) (snd $3)) }

Block :: { (Grammar.Abs.BNFC'Position, Grammar.Abs.Block) }
Block
  : '{' ListInst '}' { (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1), Grammar.Abs.Bl (uncurry Grammar.Abs.BNFC'Position (tokenLineCol $1)) (snd $2)) }

ListBlock :: { (Grammar.Abs.BNFC'Position, [Grammar.Abs.Block]) }
ListBlock
  : {- empty -} { (Grammar.Abs.BNFC'NoPosition, []) }
  | Block ListBlock { (fst $1, (:) (snd $1) (snd $2)) }

Program :: { (Grammar.Abs.BNFC'Position, Grammar.Abs.Program) }
Program : ListInst { (fst $1, Grammar.Abs.Prog (fst $1) (snd $1)) }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

-- Entrypoints

pProgram :: [Token] -> Err Grammar.Abs.Program
pProgram = fmap snd . pProgram_internal
}
